# rust-reed-solomon

./: Cargo.toml  README.md
src/: field_math.rs  lib.rs  main.rs  primitive_poly_table.rs  rs_decode.rs  rs_encode.rs
src/field-math/: field-math.rs
src/field_math/: binary_poly_divide.rs  binary_poly_multiply.rs  binary_poly_to_binary_string.rs  binary_string_to_binary_poly.rs  galios_context.rs  galios_num_multiply.rs  galios_poly_add.rs  galios_poly_divide.rs  galios_poly_divide_align.rs  galios_poly_multiply.rs  get_code_generator_poly.rs  get_galios_index_to_number_hash.rs  global.rs  items_to_poly.rs  mod.rs  number_to_binary_poly.rs  pitem.rs  poly_remove_dup.rs  poly_sum.rs  poly_to_items.rs
src/rs_decode/: chien_search.rs  error_locator.rs  forney.rs  get_syndrome.rs
tests/: error_locator_test.rs  get_syndrome_test.rs
